--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     
     <!--====== Title ======-->
-    <title>Advanced - App Landing Page Template</title>
+    <title>Menglish - Английский для детей и взрослых</title>
     
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,23 +80,23 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item active">
-                                        <a class="page-scroll" href="#home">Home</a>
+                                        <a class="page-scroll" href="#home">Домой</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#features">Feature</a>
+                                        <a class="page-scroll" href="#features">Возможности</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#about">About</a>
+                                        <a class="page-scroll" href="#about">О нас</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#screenshot">Screenshot</a>
+                                        <a class="page-scroll" href="#screenshot">Скриншоты</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <!-- <li class="nav-item">
                                         <a class="page-scroll" href="#pricing">Pricing</a>
-                                    </li>                                    
-                                    <li class="nav-item">
-                                        <a class="page-scroll" href="#blog">Blog</a>
-                                    </li>
+                                    </li>                                     -->
+                                    <!-- <li class="nav-item">
+                                        <a class="page-scroll" href="#blog">Блог</a>
+                                    </li> -->
                                 </ul>
                             </div> <!-- navbar collapse -->
                         </nav> <!-- navbar -->
@@ -146,7 +146,7 @@
                             <i class="lni lni-code"></i>
                         </div>
                         <div class="features_content">
-                            <h4 class="features_title">Bootstrap</h4>
+                            <h4 class="features_title">WEB</h4>
                             <p>Lorem ipsum dolor sit ame consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.</p>
                         </div>
                     </div> <!-- single featuresow -->
@@ -157,7 +157,7 @@
                             <i class="lni lni-layers"></i>
                         </div>
                         <div class="features_content">
-                            <h4 class="features_title">HTML5</h4>
+                            <h4 class="features_title">DESKTOP</h4>
                             <p>Lorem ipsum dolor sit ame consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.</p>
                         </div>
                     </div> <!-- single featuresow -->
@@ -168,7 +168,7 @@
                             <i class="lni lni-exit-down"></i>
                         </div>
                         <div class="features_content">
-                            <h4 class="features_title">Free</h4>
+                            <h4 class="features_title">Mobile</h4>
                             <p>Lorem ipsum dolor sit ame consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.</p>
                         </div>
                     </div> <!-- single featuresow -->
