--- a/app/404.html
+++ b/app/404.html
@@ -12,7 +12,7 @@
     <h1>Redirecting...</h1>
     <a href="https://menglish.pro/">Click here if you are not redirected.</a>
     <script>
-        window.location.replace("https://menglish.pro/");
+        window.location.replace("https://menglish.pro/app");
 
     </script>
 </body>
