--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
 <body style="padding: 0px;margin: 0px;">
   <script src="flutter_bootstrap.js" async></script>
   <div style="display: flex; height: 70vh; padding: 0px;margin: 0px; align-items: center; justify-content: center;">
-    <img src="/img/me_eng_1.svg" style="height: 40vh"></div>
+    <img src="img/me_eng_1.svg" style="height: 40vh"></div>
     <h1 style="color: white; text-align: center;">Loading MEnglish, please wait...</h1>
 
   </div>
