--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
                                         href="/app/">Продолжить онлайн</a></li>
                                 <li><a class="  wow fadeInUp" data-wow-duration="1.3s"
                                         data-wow-delay="1.4s" target="_blank"
-                                        href="https://www.rustore.ru/catalog/app/com.antkurakin.menglish"><img
+                                        href="https://www.rustore.ru/catalog/app/com.antkurakin.menglish">
+                                        <img
                                             src="assets/images/rustore.png" width="188" height="63"
-                                            alt="Скачайте из RuStore"></a></li>
+                                            alt="Скачайте из RuStore"/></a></li>
                             </ul>
                         </div> <!-- header hero content -->
                     </div>
@@ -136,8 +137,8 @@
             </div> <!-- container -->
             <div class="header_image d-flex align-items-end">
                 <div class="image wow fadeInRightBig" data-wow-duration="1.3s" data-wow-delay="1.8s">
-                    <img src="assets/images/header_app.png" alt="header App">
-                    <img src="assets/images/dots.svg" alt="dots" class="dots">
+                    <img src="assets/images/pic_3.png" height="600" alt="header App">
+                    <img src="assets/images/dots.svg"   alt="dots" class="dots">
                 </div> <!-- image -->
             </div> <!-- header image -->
         </div> <!-- header hero -->
@@ -352,17 +353,17 @@
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod.</p>
                     <ul>
                         <li>
-                            <a class="d-flex align-items-center" href="#">
-                                <span class="icon">
-                                    <i class="lni lni-play-store"></i>
-                                </span>
-                                <span class="content media-body">
+                            <a class="d-flex align-items-center" href="https://www.rustore.ru/catalog/app/com.antkurakin.menglish">
+                                <img
+                                            src="assets/images/rustore.png"   height="43"
+                                            alt="Скачайте из RuStore"/>
+                                <!-- <span class="content media-body">
                                     <h6 class="title">Play Store</h6>
                                     <p>Download Now</p>
-                                </span>
+                                </span> -->
                             </a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a class="d-flex align-items-center" href="#">
                                 <span class="icon">
                                     <i class="lni lni-apple"></i>
@@ -372,7 +373,7 @@
                                     <p>Download Now</p>
                                 </span>
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div> <!-- download app content -->
             </div> <!-- download app -->
