--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 labore et dolore magna aliquyam erat.</p>
                             <ul>
                                 <li><a class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1s"
-                                        href="/app/">Продолжить онлайн</a></li>
+                                        href="/app/">Изучать онлайн</a></li>
                                 <li><a class="  wow fadeInUp" data-wow-duration="1.3s"
                                         data-wow-delay="1.4s" target="_blank"
                                         href="https://www.rustore.ru/catalog/app/com.antkurakin.menglish">
