--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <h1>Redirecting...</h1>
     <a href="https://app.menglish.pro/">Click here if you are not redirected.</a>
     <script>
-        window.location.replace("https://app.menglish.pro/app");
+        window.location.replace("https://app.menglish.pro/");
 
     </script>
 </body>
