--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html style="padding: 0px;margin: 0px; background-color: blueviolet;">
+<html style="padding: 0px;margin: 0px; background-color: #AC83F5;">
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -28,27 +29,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>MEnglish</title>
   <link rel="manifest" href="manifest.json">
- <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-  m[i].l=1*new Date();
-  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+      m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+      m[i].l = 1 * new Date();
+      for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+      k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-  ym(98057798, "init", {
-       clickmap:true,
-       trackLinks:true,
-       accurateTrackBounce:true
-  });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/98057798" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+    ym(98057798, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true
+    });
+  </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/98057798" style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript>
+  <!-- /Yandex.Metrika counter -->
 </head>
+
 <body style="padding: 0px;margin: 0px;">
   <!-- <script>
     if (
@@ -70,9 +76,12 @@
   </script> -->
   <script src="flutter_bootstrap.js" async></script>
   <div style="display: flex; height: 70vh; padding: 0px;margin: 0px; align-items: center; justify-content: center;">
-    <img src="img/me_eng_1.svg" style="height: 40vh"></div>
-    <h1 style="color: white; text-align: center;">Loading MEnglish, please wait...</h1>
+    <!-- <img src="img/me_eng_1.svg" style="height: 40vh"></div> -->
+    <img src="img/me_logo.png" style="height: 40vh">
+  </div>
+  <h1 style="color: white; text-align: center;">Loading MEnglish, please wait...</h1>
 
   </div>
 </body>
+
 </html>
